--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.2
   table_calendar: ^3.0.9
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
