:pencil2: Fix typos
Fix typos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_speed_dial: ^7.0.0
   google_sign_in: ^6.1.4
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
